--- a/.env
+++ b/.env
@@ -21,3 +21,6 @@ SQL_PASSWORD=
 SQL_DB_NAME=libraryServer
 #============JSON DB Credentials=====
 JSON_DB_NAME=libraryServer
+#============Supervisor==============
+OWNER = 100000000
+OWNER_PASS=qwerty
