--- a/.env
+++ b/.env
@@ -1,13 +1,6 @@
-#database modes:
-#SQL - sql database
-#MONGO - mongo database
-#NODE_JSON - Node JSON database
-
 #DATABASE_MODE=SQL
 DATABASE_MODE=MONGO
 #DATABASE_MODE=NODE_JSON
-
-PORT=3050
 #============Mongo Credentials=======
 MONGO_CLUSTER="mongodb+srv://nikitadyugurov:tRcFf0Yt2J0ASgBN@cluster0.p1mqnme.mongodb.net/"
 MONGO_DATABASE=libraryServer
@@ -24,3 +17,6 @@ JSON_DB_NAME=libraryServer
 #============Supervisor==============
 OWNER = 100000000
 OWNER_PASS=qwerty
+#============JWT=====================
+JWT_SECRET=super-extra-secret-key-for-jwt
+JWT_EXP=1h
