--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "rimraf ./build && tsc && node ./build/src/app.js",
     "dev": "tsx watch src/app.ts dev"
   },
@@ -16,6 +16,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.5",
     "@types/joi": "^17.2.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.9.1",
     "@types/node-json-db": "^0.0.1",
@@ -32,9 +33,11 @@
     "express": "^5.1.0",
     "express-winston": "^4.2.0",
     "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.19.4",
     "mysql2": "^3.15.3",
     "node-json-db": "^2.4.2",
+    "uuid": "^8.3.2",
     "uuidv4": "^6.2.13",
     "winston": "^3.18.3"
   }
