--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.5",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/jest": "^30.0.0",
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.9.1",
     "@types/node-json-db": "^0.0.1",
-    "@types/uuidv4": "^2.0.0",
+    "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
+    "jest": "^30.2.0",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
@@ -40,7 +44,6 @@
     "mysql2": "^3.15.3",
     "node-json-db": "^2.4.2",
     "uuid": "^8.3.2",
-    "uuidv4": "^6.2.13",
     "winston": "^3.18.3"
   }
 }
