Homework 18, release version 1.0 tests

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ts-template",
   "version": "1.0.0",
   "main": "index.js",
+  "files": [
+    "!build/tests"
+  ],
   "scripts": {
     "test": "jest",
     "start": "rimraf ./build && tsc && node ./build/src/app.js",
