--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.9.1",
     "@types/node-json-db": "^0.0.1",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "jest": "^30.2.0",
@@ -43,6 +44,7 @@
     "mongoose": "^8.19.4",
     "mysql2": "^3.15.3",
     "node-json-db": "^2.4.2",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^8.3.2",
     "winston": "^3.18.3"
   }
